@@ -20,6 +20,7 @@
     * Fix Net::SSLeay::SSL_CTX#set_client_CA_list bugs.
     * Fix Net::SSLeay::SSL_CTX#add_extra_chain_cert bugs.
     * Fix Net::SSLeay::SSL_CTX#get0_param bugs.
+    * Fix Net::SSLeay::SSL_CTX#get_cert_store bugs.
 0.024 2024-12-08
   [New Features]
     * Add Net::SSLeay::XX509_EXTENSION#new method.
